--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,7 +54,7 @@
 	}
 }
 .jumbotron {
-	background-image: asset-url('yourimagename.png');
+	background-image: asset-url('main-bg.jpg');
 	background-size: cover;
 	color: #fff;
 	font-family: 'Helvetica Neue' !important;
